--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -1,8 +1,7 @@
 body{
     background: var(--bg-color);
     height: 100vh;
-
-    overflow: hidden;
+    overflow:auto
 }
 
 #root{
@@ -12,3 +11,23 @@ body{
 .App{
     height: 100%;
 }
+
+body {
+    scrollbar-width: 5px;
+    scrollbar-color: var(--primary-color);
+    scroll-behavior: smooth;
+  }
+
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: rgb(228, 228, 242);
+    border-radius: 20px;
+  }
