--- a/src/styles/handles-styles.css
+++ b/src/styles/handles-styles.css
@@ -46,3 +46,10 @@
     font-size: 16px;
     margin: 0;
   }
+
+  .radial-stats{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
